# ABTRDA3

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config-plan.md  wren-sidecar.md
cmake/: BinToHeader.cmake  BpfCompile.cmake  Libbpf.cmake  toolchain-arm64.cmake
src/: AFXDPRx.cpp  AFXDPRx.hpp  AFXDPSocket.cpp  AFXDPSocket.hpp  AFXDPTx.cpp  AFXDPTx.hpp  CMakeLists.txt  NicTuner.cpp  NicTuner.hpp  PacketMmapRx.cpp  PacketMmapRx.hpp  PacketMmapTx.cpp  PacketMmapTx.hpp  SocketOps.cpp  SocketOps.hpp
src/bpf/: xdp_filter.bpf.c
test/: CMakeLists.txt  Client.hpp  Server.hpp  TestConfig.hpp  abtrda3_test.toml  main.cpp
test/latency_analysis/: plot_latencies.py
